# litewire

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/litewire/: Cargo.toml
crates/litewire-backend/: Cargo.toml
crates/litewire-backend/src/: hrana_client.rs  lib.rs  rusqlite_backend.rs
crates/litewire-backend/tests/: hrana_client_integration.rs
crates/litewire-hrana/: Cargo.toml
crates/litewire-hrana/src/: http.rs  lib.rs  types.rs
crates/litewire-mysql/: Cargo.toml
crates/litewire-mysql/src/: error_map.rs  handler.rs  lib.rs  resultset.rs  types.rs
crates/litewire-postgres/: Cargo.toml
crates/litewire-postgres/src/: error_map.rs  handler.rs  lib.rs  types.rs
crates/litewire-tds/: Cargo.toml
crates/litewire-tds/src/: handler.rs  lib.rs  packet.rs  token.rs
crates/litewire-translate/: Cargo.toml
crates/litewire-translate/src/: cache.rs  common.rs  emit.rs  lib.rs  metadata.rs  mysql.rs  postgres.rs  tds.rs
crates/litewire-turso/: Cargo.toml
crates/litewire-turso/examples/: phase1_gates.rs
crates/litewire-turso/src/: cdc.rs  lib.rs
crates/litewire-turso/tests/: cdc_ddl_capture.rs  cdc_replication.rs  litewire_basics.rs  multi_factory_same_file.rs
crates/litewire/src/: lib.rs  main.rs
crates/litewire/tests/: mysql_e2e.rs  mysql_turso_e2e.rs  postgres_e2e.rs  tds_e2e.rs
docs/: architecture.md
