[package]
name = "litewire-hrana"
description = "Hrana HTTP frontend for litewire (sqld-compatible)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
litewire-backend = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
