[package]
name = "litewire-postgres"
description = "PostgreSQL wire protocol frontend for litewire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
litewire-backend = { workspace = true }
litewire-translate = { workspace = true }
pgwire = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
