[package]
name = "litewire-translate"
description = "SQL dialect translation (MySQL/PG/T-SQL -> SQLite)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sqlparser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# LRU cache in front of the parse+rewrite pipeline. Small dep (no proc-macros,
# hashbrown-only), already transitively pulled in by other workspace members.
lru = "0.12"
parking_lot = { workspace = true }
