[package]
name = "litewire"
description = "MySQL, PostgreSQL, TDS, and Hrana protocol proxy for SQLite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "litewire"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
litewire-backend = { workspace = true }
litewire-translate = { workspace = true }
litewire-mysql = { workspace = true, optional = true }
litewire-postgres = { workspace = true, optional = true }
litewire-tds = { workspace = true, optional = true }
litewire-hrana = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true }
futures = { workspace = true }

[features]
default = ["mysql", "hrana", "backend-rusqlite"]
mysql = ["dep:litewire-mysql"]
postgres = ["dep:litewire-postgres"]
tds = ["dep:litewire-tds"]
hrana = ["dep:litewire-hrana"]
backend-rusqlite = ["litewire-backend/rusqlite"]
backend-hrana-client = ["litewire-backend/hrana-client"]
cli = ["dep:clap", "dep:tracing-subscriber"]

[dev-dependencies]
mysql_async = { workspace = true }
tokio-postgres = { workspace = true }
tiberius = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
